# GC_CloudSegmentation

./: .gitignore  ALL_BUILD.vcxproj  Archiv.cpp  CMakeLists.txt  MinCut.cpp  MinCut.h  PCFrame.cpp  PCFrame.h  README.md  Segmentation.sln  UpgradeLog.XML  VisualizerWidget.vcxproj  VisualizerWidget.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  global.cpp  global.h  header.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow - Kopie (2).cpp  moc_mainwindow - Kopie.cpp  moc_mainwindow.cpp  operation.cpp  operation.h  ui_mainwindow.h
Texts_and_Screenshots/: GliederungLAB.txt
Texts_and_Screenshots/Praesentation/: Präsentation1.pptx
